Agregando bootstrap, creando estructura del inicio de sesión, se corrigió el error del footer y del navbar
Co-Authored-By: Sebas175 <60578731+Sebas175@users.noreply.github.com>

--- a/TeamAngular19Comfeco/angular.json
+++ b/TeamAngular19Comfeco/angular.json
@@ -31,9 +31,14 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/style1.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jquery-3.5.1.slim.min.js",
+              "src/assets/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
