--- a/TeamAngular19Comfeco/angular.json
+++ b/TeamAngular19Comfeco/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/style1.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "src/assets/js/jquery-3.5.1.slim.min.js",
