--- a/TeamAngular19Comfeco/package.json
+++ b/TeamAngular19Comfeco/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "firebase": "^8.2.6",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "swiper": "^6.4.15",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
